@@ -1,4 +1,4 @@
 DIST plexus-interactivity-api-1.0.tar.bz2 8500 RMD160 c6839199ee5a2353bde345786715d7ca40dd273e SHA1 ad1231c4097f9007bb47af39ef13f3d0ea64aec4 SHA256 e00ee3134539b0fbcfe5bb4e06ec5a5b1e78d2fdd595d0e498fc42c600edcd48
-EBUILD plexus-interactivity-api-1.0.ebuild 720 RMD160 4c5ae1afd802324ce97c666168af9295d8e88d49 SHA1 cba49b228fee4b45f4ac4bba521fd576b1094f33 SHA256 9ca8d46bb1a35f1d0dda7a312a5e4df05dfd8b9fc45d424d54fc21fff3ba1281
-MISC ChangeLog 615 RMD160 dd7c9ad2cf20ef863a398d64cf0f277ea09f65fd SHA1 36de9e5c201452b844443012e2c52c54052ae91d SHA256 f364e0cde904861d28429850a2edb41f5bb5d4d555efd06a3d9997ebf1a8ba14
+EBUILD plexus-interactivity-api-1.0.ebuild 907 RMD160 425a80e06132006d39b6c07f112004f08d1b8548 SHA1 ab3b83e4af21203b6e52c05459a4341e74a39381 SHA256 98138b58996459e8e14559bf5be3035bfcc0e77b2d053191e9d84aff88591b98
+MISC ChangeLog 742 RMD160 eae26ce280480d03374845adb7461ef1ca5f091c SHA1 1a5ce2a821b4a40b389bf36b4b81a3240e4a566f SHA256 4a14e40e84f687cce9e86afac6756d85a15f8a754754c65528dd231835190bff
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
